# gaze-lens

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  README.md  SECURITY.md  SPEC.md  dist-workspace.toml  solo.yml
.claude/rules/: rust.md
.claude/skills/gaze-lens-setup/: SKILL.md
.githooks/: pre-push
.github/workflows/: ci.yml  release.yml
docs/: README.md  cross-platform-roadmap.md  gaze-0.11-adoption.md  profiles.md  public-readiness.md  replay.md  v0.9-observability.md
docs/explanation/: cross-platform-roadmap.md  gaze-0.11-adoption.md  pseudonymization-and-replay.md  threat-model.md
docs/how-to/: configure-profiles.md  replay-a-session.md  search-logs.md  set-up-production-NER.md  wire-up-mcp-clients.md
docs/reference/: architecture.md  cli.md  mcp-tools.md  policy-schema.md  profile-schema.md  spec.md
docs/tutorials/: getting-started.md
examples/: replay-fixture.rs
reference/debug-proxy/: Cargo.toml
reference/debug-proxy/src/: lib.rs  main.rs  policy.rs
reference/debug-proxy/src/adapter/: laravel_log.rs  mod.rs  mysql.rs  ssh_tunnel.rs
reference/debug-proxy/src/cli/: check.rs  init.rs  mod.rs  serve.rs
reference/debug-proxy/src/mcp/: errors.rs  server.rs
reference/debug-proxy/tests/: canary.rs  cli.rs  e2e_mysql.rs  serve.rs  tools.rs
src/: errors.rs  lib.rs  main.rs  policy.rs  profile.rs  value.rs
src/cli/: check.rs  check_trust.rs  demo.rs  init.rs  mod.rs  query.rs  replay.rs  retention.rs  serve.rs
src/cli/init/: agents_md.rs  agents_snippet.md  atomic.rs  batch.rs  discovery.rs  flow.rs  mcp_writer.rs  mod.rs  model_fetch.rs  plan.rs  policy_writer.rs  profile_writer.rs  prompter.rs  ssh_exec.rs
src/frontend/: mcp.rs  mod.rs
src/manifest/: gaze_mcp_adapter.rs  mod.rs
src/mcp/: auth.rs
src/mcp/tools/: list_tables.rs  log_grep.rs  log_tail.rs  mod.rs  query.rs  schema.rs
src/session/: maintenance.rs  manifest.rs  mod.rs  restore.rs
src/source/: mod.rs  ssh_tunnel.rs
src/source/db/: mod.rs  mysql.rs  postgres.rs  query.rs  runtime.rs  schema.rs  sqlite.rs
src/source/log/: local_log.rs  mod.rs  ssh_log.rs
tests/: audit_core.rs  canned_query.rs  chokepoint_envelope.rs  cli_check.rs  cli_check_model.rs  cli_demo.rs  cli_init.rs  cli_init_flags.rs  cli_init_production.rs  cli_query.rs  cli_replay.rs  cli_serve.rs  cross_process_replay.rs  discovery_metadata.rs  error_display.rs  error_sanitization.rs  fake_source.rs  host_validator_single_source.rs  init_agents_md.rs  init_agents_md_first_append.rs  init_atomic.rs  init_flow.rs  init_idempotent.rs  init_keyring_atomicity.rs  init_keyring_flow.rs  init_mcp_writer.rs  init_partial_failure.rs  init_profile_writer.rs  init_prompter.rs  init_smoke_check.rs  init_ssh_discovery.rs  init_ssh_host_gate.rs  integration_keyring.rs  local_log_source.rs  mcp_error_paths.rs  mcp_frontend.rs  multi_profile_e2e.rs  mysql_adapter.rs  policy.rs  policy_runtime.rs  (+15 more)
tests/fixtures/: init_print_only_mysql.golden.txt  init_print_only_postgres.golden.txt  init_print_only_sqlite.golden.txt  init_print_only_ssh_log.golden.txt
tests/support/: mod.rs
