[package]
name = "gaze-lens"
version = "0.0.1"
edition = "2024"
rust-version = "1.89"
license = "Apache-2.0"
description = "PII-safe read-access for live production investigation by AI agents"
repository = "https://github.com/PIInuts/gaze-lens"

[features]
integration-mysql = []
integration-postgres = []

[dependencies]
async-trait = "0.1"
clap = { version = "4.5", features = ["derive", "env"] }
gaze = { path = "../../../../Workspace/bets/Gaze/crates/gaze" }
gaze-recognizers = { path = "../../../../Workspace/bets/Gaze/crates/gaze-recognizers" }
rmcp = { version = "0.2", features = ["client", "transport-io"] }
regex = "1"
rusqlite = "0.32"
schemars = { version = "0.8", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shellexpand = "3"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "mysql", "postgres", "sqlite", "time", "uuid", "json", "bigdecimal"] }
thiserror = "2"
time = { version = "0.3", features = ["formatting", "serde"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util", "process", "signal", "sync", "time"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
ulid = { version = "1", features = ["serde"] }

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["postgres"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
