[package]
name = "gaze-lens"
version = "0.4.1"
edition = "2024"
rust-version = "1.89"
license = "Apache-2.0"
description = "PII-safe read-access for live production investigation by AI agents"
repository = "https://github.com/EmpireTwo/gaze-lens"
authors = ["EmpireTwo"]
include = [
    ".claude/rules/rust.md",
    ".claude/skills/gaze-lens-setup/SKILL.md",
    ".gitignore",
    "AGENTS.md",
    "ARCHITECTURE.md",
    "CHANGELOG.md",
    "CLAUDE.md",
    "CONTRIBUTING.md",
    "Cargo.lock",
    "Cargo.toml",
    "GEMINI.md",
    "LICENSE",
    "README.md",
    "SECURITY.md",
    "SPEC.md",
    "dist-workspace.toml",
    "docs/cross-platform-roadmap.md",
    "docs/profiles.md",
    "docs/public-readiness.md",
    "docs/replay.md",
    "docs/v0.9-observability.md",
    "examples/**",
    "src/**",
    "tests/**",
]

[features]
integration-keyring = []
integration-mysql = []
integration-postgres = []

[dependencies]
async-trait = "0.1"
clap = { version = "4.5", features = ["derive", "env"] }
dialoguer = { version = "0.11", default-features = false, features = ["password"] }
gaze = { package = "gaze-pii", version = "0.9.0-rc.1" }
gaze-recognizers = "0.9.0-rc.1"
gaze-mcp-core = "0.9.0-rc.1"
keyring = { version = "3.6.3", default-features = false, features = ["apple-native", "windows-native", "sync-secret-service", "crypto-rust"] }
log = "0.4"
rmcp = { version = "0.2", features = ["client", "transport-io"] }
regex = "1"
rusqlite = "0.32"
schemars = { version = "0.8", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
shellexpand = "3"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "mysql", "postgres", "sqlite", "time", "uuid", "json", "bigdecimal"] }
tempfile = "3"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "serde"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util", "process", "signal", "sync", "time"] }
toml = "0.8"
toml_edit = "0.22"
tracing = "0.1"
tracing-subscriber = "0.3"
ulid = { version = "1", features = ["serde"] }
zeroize = "1"

[dev-dependencies]
assert_cmd = "2"
rand = "0.8"
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["postgres"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
