[package]
name = "debug-proxy"
version = "0.3.1"
edition = "2021"
rust-version = "1.89"
license = "Apache-2.0"
description = "Debug proxy consumer for the Gaze core engine"

[features]
default = []
test-utils = []

[lib]
name = "debug_proxy"
path = "src/lib.rs"

[[bin]]
name = "debug-proxy"
path = "src/main.rs"

[dependencies]
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
gaze = { path = "../gaze" }
gaze-recognizers = { path = "../gaze-recognizers" }
rmcp = { version = "0.2", features = ["transport-io"] }
schemars = { version = "0.8", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "mysql"] }
thiserror = "1"
tokio = { version = "1", features = ["fs", "io-util", "macros", "rt-multi-thread"] }
toml = "0.8"
tracing = "0.1"

[dev-dependencies]
regex = "1"
tempfile = "3"
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["mysql"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
